@@ -1,3 +1,8 @@
+2002-01-27  Masatake YAMATO  <yamato@redhat.com>
+
+	* xstd.h (XREALLOC): Remove the last backslash
+	at XREALLOC. This is my typo.
+
 2002-01-23  Masatake YAMATO  <yamato@redhat.com>
 
 	* xstd.h: Use assert instead of FATAL.
